# OS-HAFALA-234123-HW1

./: .gitignore  README.md  test.c
EXP_ADT/: AVLNode.h  AVLTree.h  DeQue.h  DeQueNode.h  EXP_ADT.h  Pair.h  main.cpp
skeleton_smash/: AliasManager.cpp  AliasManager.h  BuiltInCommands.cpp  BuiltInCommands.h  CMakeLists.txt  CommandFactories.cpp  CommandFactories.h  Commands.cpp  Commands.h  ComplexExternalCommands.cpp  ComplexExternalCommands.h  ExternalCommands.cpp  ExternalCommands.h  FDManager.cpp  FDManager.h  JobList.cpp  JobList.h  Makefile  SmallShell.cpp  SmallShell.h  SmallShellHeaders.h  SmashUtil.cpp  SmashUtil.h  SpecialCommands.cpp  SpecialCommands.h  Temp_Restore.cpp  Temp_Restore.h  bla  bla.txt  file_to_push  info_from_compiling.txt  japan.txt  linkererrrrrr.txt  main (4)(1).py  main.cpp  my_pid  signals.cpp  signals.h  smash  smash.cpp  (+4 more)
